--- a/pom.xml
+++ b/pom.xml
@@ -11,21 +11,36 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.2</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
   <build>
+    <pluginManagement>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
         <configuration>
-          <redirectTestOutputToFile>false</redirectTestOutputToFile>
-          <useSystemOut>true</useSystemOut>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.1</version>
+        <configuration>
+          <arhive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>com.example.App</mainClass>
+            </manifest>
+          </arhive>
+          </configuration>
+      </plugin>
     </plugins>
+    </pluginManagement>
   </build>
 </project>
